--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,6 @@
         android:contentDescription="Test"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/Gris" />
+        app:srcCompat="@drawable/gris" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
